config-k8s/defTelemetry/jaeger/virtualService-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
    - jaeger.usvc.algo.fit
  gateways:
    - jaeger-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jaeger-query
            port:
              number: 16686
